@@ -697,11 +697,13 @@ class Ui_Dialog(object):
         self.StrongBodyLabel.setText(QCoreApplication.translate("Dialog", u"(BETA)", None))
         self.BodyLabel_19.setText(QCoreApplication.translate("Dialog", u"Type", None))
         self.BodyLabel_10.setText(QCoreApplication.translate("Dialog", u"Host", None))
-        self.LineEdit.setPlaceholderText("")
+        self.LineEdit.setPlaceholderText(QCoreApplication.translate("Dialog", u"192.168.1.1", None))
         self.BodyLabel_14.setText(QCoreApplication.translate("Dialog", u"Port", None))
-        self.LineEdit_2.setPlaceholderText("")
+        self.LineEdit_2.setPlaceholderText(QCoreApplication.translate("Dialog", u"8080", None))
         self.BodyLabel_16.setText(QCoreApplication.translate("Dialog", u"Login", None))
+        self.LineEdit_3.setPlaceholderText(QCoreApplication.translate("Dialog", u"user123", None))
         self.BodyLabel_17.setText(QCoreApplication.translate("Dialog", u"Password", None))
+        self.PasswordLineEdit.setPlaceholderText(QCoreApplication.translate("Dialog", u"password123", None))
         self.BodyLabel_15.setText(QCoreApplication.translate("Dialog", u"<html><head/><body><p><span style=\" color:#808080;\">When enabled, this setting allows you to specify a custom proxy server for accessing the YouTube Music website. </span></p></body></html>", None))
         self.CheckBox.setText(QCoreApplication.translate("Dialog", u"Allow pytube (downloader) access to proxy", None))
         self.BodyLabel_2.setText(QCoreApplication.translate("Dialog", u"Save and restore mini-player position", None))
