@@ -1,3 +1,11 @@
+### Update 1.10.1 🎉 (August 21, 2024)
+
+- Fixed display of some previews in the mini player.
+- Fixed a bug that made it possible to open the mini-player on the playlist page.
+- The settings window has a fixed size again.
+- Added Placeholder Text to Host, Port, Login and Password fields in Application Proxy settings.
+- Other minor fixes and improvements.
+
 ### Update 1.10 🎉 (August 10, 2024)
 
 - Added ability to download tracks/playlists with custom proxy (Enabled by default). To disable it, go to settings > Web Engine > Allow pytube (downloader) access to proxy > uncheck the checkbox.
